add responsive title

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -30,10 +30,12 @@ img {
   color: #fff;
 }
 
-.App-intro {
-  font-size: large;
-}
-
 .Gallery-container {
   margin: 5% 10% 0 10%;
+}
+
+@media (max-width: 500px) {
+  .App-title {
+    font-size: 30px;
+  }
 }
