--- a/src/css/HoverPic.css
+++ b/src/css/HoverPic.css
@@ -1,17 +1,27 @@
 .pic {
   position: relative;
-  margin: 10px;
-  flex: 1 0 300px;
+  margin: 20px;
+  width: 300px;
 }
 
-.pic:hover .c {
+.l-pic {
+  position: relative;
+  margin: 20px;
+  width: 450px;
+}
+
+.pic:hover .c, .l-pic:hover .c {
   opacity: 1;
 }
+
+/* .l-pic:hover .c {
+  opacity: 1;
+} */
 
 .bw, .c {
   height: 100%;
   width: 100%;
-  object-fit: cover;
+  /* object-fit: scale-down; */
 }
 
 .bw {
@@ -27,3 +37,33 @@
   opacity: 0;
   transition: .5s ease;
 }
+
+@media (max-width: 550px) {
+  .l-pic {
+    width: 400px;
+  }
+
+  .pic {
+    width: 400px;
+  }
+}
+
+@media (max-width: 450px) {
+  .l-pic {
+    width: 300px;
+  }
+
+  .pic {
+    width: 300px;
+  }
+}
+
+/* @media (max-width: 750px) {
+  .l-pic {
+    width: calc(100vw);
+  }
+
+  .pic {
+    width: 400px;
+  }
+} */
