--- a/src/css/HoverPic.css
+++ b/src/css/HoverPic.css
@@ -1,11 +1,31 @@
 .pic {
   position: relative;
   margin: 10px;
-  flex-grow: 1;
-  flex-shrink: 0;
+  width: 20vw;
+  /* flex-grow: 1;
+  flex-shrink: 0; */
 }
 
-.pic-2-3 {
+@media (max-width: 1200px) {
+  .pic {
+    width: 30vw;
+  }
+}
+
+@media (max-width: 700px) {
+  .pic {
+    width: 40vw;
+  }
+}
+
+@media (max-width: 514px) {
+  .pic {
+    width: 90vw;
+  }
+}
+
+
+/* .pic-2-3 {
   width: 300px;
 }
 
@@ -23,7 +43,7 @@
 
 .pic-7-8 {
   width: 150px;
-}
+} */
 
 
 .pic:hover .c {
@@ -37,7 +57,7 @@
 .bw, .c {
   height: 100%;
   width: 100%;
-  object-fit: scale-down;
+  /* object-fit: scale-down; */
 }
 
 .bw {
